--- a/.github/workflows/codeQL.yml
+++ b/.github/workflows/codeQL.yml
@@ -13,6 +13,12 @@ jobs:
       security-events: write
       actions: read
       contents: read
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+        - language: csharp
+          build-mode: none
 
     steps:
       - name: Checkout repository
